# pico-vga-text

./: README.md
.github/workflows/: build.yml
arduino/arduino-serial/: arduino-serial.ino
arduino/arduino_latch/: arduino_latch.ino
pcb/pico-vga-devboard/: pico-vga-devboard.kicad_pcb  pico-vga-devboard.kicad_pro  pico-vga-devboard.kicad_sch  pico-vga-devboard.rules  sym-lib-table
pcb/pico-vga-devboard/GERBERS/: pico-vga-devboard-B_Cu.gbr  pico-vga-devboard-B_Mask.gbr  pico-vga-devboard-B_Paste.gbr  pico-vga-devboard-B_Silkscreen.gbr  pico-vga-devboard-Edge_Cuts.gbr  pico-vga-devboard-F_Cu.gbr  pico-vga-devboard-F_Mask.gbr  pico-vga-devboard-F_Paste.gbr  pico-vga-devboard-F_Silkscreen.gbr  pico-vga-devboard-NPTH.drl  pico-vga-devboard-PTH.drl  pico-vga-devboard-job.gbrjob
pcb/pico-vga-devboard/components/: 618015330923.dcm  618015330923.kicad_mod  618015330923.lib
pcb/pico-vga-devboard/production/: netlist.ipc
scripts/: font.c  p2000cfont.py  testscreen.py
src/: CMakeLists.txt  api.c  api.h  font.c  hsync.pio  latch.pio  main.c  protothreads.h  rgb.pio  vga.c  vga.h  vga_text.c  vga_text.h  vsync.pio
test/buzzer/: CMakeLists.txt  main.c
test/latch/: CMakeLists.txt  latch.pio  main.c
